--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
             font-size: 3em;
             text-align: center;
         }
+        img {
+            max-width: 200px; /* Adjust the width as needed */
+            height: auto;
+        }
     </style>
 </head>
 <body>
+    <!-- Logo Image -->
+    <img src="assets/logo.png" alt="Cipher Logo">
+    
+    <!-- Coming Soon Text -->
     <h1>Site Coming Soon</h1>
+    
 </body>
 </html>
