--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         body {
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
@@ -18,6 +19,7 @@
         h1 {
             font-size: 3em;
             text-align: center;
+            margin-top: 20px;
         }
         img {
             max-width: 200px; /* Adjust the width as needed */
@@ -31,6 +33,5 @@
     
     <!-- Coming Soon Text -->
     <h1>Site Coming Soon</h1>
-    
 </body>
 </html>
