Added Butterfly Logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <!-- Logo Image -->
-    <img src="assets/logo.png" alt="Cipher Logo">
+    <img src="assets/Butterfly2.png" alt="Cipher Logo">
     
     <!-- Coming Soon Text -->
     <h1>Site Coming Soon</h1>
