--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             width: 100%;
             padding: 20px;
             text-align: center;
-            background-color: #333;
-            color: #fff;
+            background-color: #AD7800;
+            color: #333;
             position: absolute;
             bottom: 0;
             left: 0;
         }
         footer a {
-            color: #fff;
+            color: #333;
             text-decoration: none;
             margin: 0 10px;
         }
@@ -47,7 +47,7 @@
 </head>
 <body>
     <!-- Logo Image -->
-    <img src="assets/logo.png" alt="Cipher Logo">
+    <img src="assets/Butterfly2.png" alt="Cipher Logo">
     
     <!-- Footer -->
     <footer>
