--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             min-height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f2f2f2;
             color: #333;
         }
         h1 {
@@ -22,7 +22,7 @@
             margin-top: 20px;
         }
         img {
-            max-width: 200px;
+            max-width: 300px;
             height: auto;
         }
         footer {
@@ -30,13 +30,13 @@
             padding: 20px;
             text-align: center;
             background-color: #AD7800;
-            color: #333;
+            color: #eee;
             position: absolute;
             bottom: 0;
             left: 0;
         }
         footer a {
-            color: #333;
+            color: #eee;
             text-decoration: none;
             margin: 0 10px;
         }
