Added AASA file

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             width: 100%;
             padding: 20px;
             text-align: center;
-            background-color: #AD7800;
-            color: #eee;
+            background-color: #f2f2f2;
+            color: #ad7800;
             position: absolute;
             bottom: 0;
             left: 0;
