--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
             color: #333;
+            position: relative;
         }
         h1 {
             font-size: 3em;
@@ -27,13 +28,14 @@
         }
         footer {
             width: 100%;
-            padding: 20px;
+            padding: 10px 0;
             text-align: center;
             background-color: #f2f2f2;
             color: #ad7800;
             position: absolute;
-            bottom: 0;
+            bottom:0;
             left: 0;
+            right:0,
         }
         footer a {
             color: #eee;
