--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 100vh;
+            height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
