Added header tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cipher</title>
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Cipher App - Travel Memories Shared" />
+    <meta property="og:description" content="Share your travel memories and experiences with friends and family using the Cipher app." />
+    <meta property="og:image" content="https://cipher-app.com/assets/Butterfly2.png" />
+    <meta property="og:url" content="https://cipher-app.com" />
+    <meta property="og:type" content="website" />
+
     <style>
         body {
             display: flex;
