Added back app store link

--- a/index.html
+++ b/index.html
@@ -62,15 +62,13 @@
     <img src="assets/Butterfly2.png" alt="Cipher Logo">
 
     <!-- App Store Badge -->
-    <!-- 
-        <a href="https://apps.apple.com/us/app/cipher-travel-memories-shared/id6503364756">
-            <img src="https://apple-resources.s3.amazonaws.com/media-badges/download-on-the-app-store/black/en-us.svg" alt="Download on the App Store" class="app-store-badge">
-        </a>
-    -->
+    <a href="https://apps.apple.com/us/app/cipher-travel-memories-shared/id6503364756">
+        <img src="https://apple-resources.s3.amazonaws.com/media-badges/download-on-the-app-store/black/en-us.svg" alt="Download on the App Store" class="app-store-badge">
+    </a>
     
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Show Me The Way LLC<br>All rights reserved</p>
+        <p>&copy; 2024 Show Me The Way LLC<br>All Rights Reserved</p>
     </footer>
 </body>
 </html>
