--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="https://cipher-app.com/assets/Butterfly2.png" />
     <meta property="og:url" content="https://cipher-app.com" />
     <meta property="og:type" content="website" />
-    <meta name="apple-itunes-app" content="app-id=6503364756">
+    <meta name="apple-itunes-app" content="app-id=6503364756, app-argument=https://cipher-app.com/trip-share/XYZ">
 
     <style>
        body, html {
@@ -66,6 +66,7 @@
     <a href="https://apps.apple.com/us/app/cipher-travel-memories-shared/id6503364756">
         <img src="https://apple-resources.s3.amazonaws.com/media-badges/download-on-the-app-store/black/en-us.svg" alt="Download on the App Store" class="app-store-badge">
     </a>
+    
     
     <!-- Footer -->
     <footer>
