Removed apple itunes meta header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="https://cipher-app.com/assets/Butterfly2.png" />
     <meta property="og:url" content="https://cipher-app.com" />
     <meta property="og:type" content="website" />
-    <meta name="apple-itunes-app" content="app-id=6503364756, app-argument=https://cipher-app.com/trip-share/XYZ">
+    <!-- <meta name="apple-itunes-app" content="app-id=6503364756, app-argument=https://cipher-app.com/trip-share/XYZ"> -->
 
     <style>
         body, html {
