--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Cipher App - Travel Memories Shared" />
     <meta property="og:description" content="Share your travel memories and experiences with friends and family using the Cipher app." />
-    <meta property="og:image" content="https://cipher-app.com/assets/ButterflyBW.png" />
+    <meta property="og:image" content="https://cipher-app.com/assets/adaptive-icon.png" />
     <meta property="og:url" content="https://cipher-app.com" />
     <meta property="og:type" content="website" />
     <!-- <meta name="apple-itunes-app" content="app-id=6503364756, app-argument=https://cipher-app.com/trip-share/XYZ"> -->
