Update * Added butterfly browser tab

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cipher Admin</title>
     <link rel="stylesheet" href="/admin/styles.css">
+    <link rel="icon" type="image/png" href="/assets/Butterfly2.png">
+    <link rel="apple-touch-icon" href="/assets/Butterfly2.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div class="container" id="authContainer">
