--- a/public/admin/newtrip.html
+++ b/public/admin/newtrip.html
@@ -11,6 +11,9 @@
    <title>Trip Admin</title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
    <link rel="stylesheet" href="/admin/styles.css">
+   <link rel="icon" type="image/png" href="/assets/Butterfly2.png">
+   <link rel="apple-touch-icon" href="/assets/Butterfly2.png">
+   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
    <div class="container">
