--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta http-equiv="refresh" content="0; url=https://www.termsfeed.com/live/c1095f1a-a014-4b69-8f57-100bb6a9d864" />
+    <link rel="icon" type="image/png" href="/assets/Butterfly2.png">
+    <link rel="apple-touch-icon" href="/assets/Butterfly2.png">
+    <meta name="theme-color" content="#ffffff">
     <title>Redirecting to Privacy Policy</title>
 </head>
 <body>
