--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <meta property="og:image" content="https://cipher-app.com/assets/adaptive-icon.png" />
     <meta property="og:url" content="https://cipher-app.com" />
     <meta property="og:type" content="website" />
+    <link rel="icon" type="image/png" href="/assets/Butterfly2.png">
+    <link rel="apple-touch-icon" href="/assets/Butterfly2.png">
+    <meta name="theme-color" content="#ffffff">
     <!-- <meta name="apple-itunes-app" content="app-id=6503364756, app-argument=https://cipher-app.com/trip-share/XYZ"> -->
 
     <style>
