Update: deleted unused files and cleaned up the admin console.

--- a/public/admin/console.html
+++ b/public/admin/console.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cipher Console</title>
+    <link rel="stylesheet" href="/admin/styles/consoleStyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
-    <link rel="stylesheet" href="styles/consoleStyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
     <!-- Firebase SDKs -->
@@ -244,7 +244,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/6.8.2/tinymce.min.js"></script>
-    <script type="module" src="console.js"></script>
+    <script type="module" src="/admin/console.js"></script>
 
     <div id="lightbox" class="lightbox" onclick="this.style.display='none'">
         <button class="lightbox-close">&times;</button>
