--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cipher Admin</title>
-    <link rel="stylesheet" href="styles/indexStyles.css">
+    <link rel="stylesheet" href="/admin/styles/indexStyles.css">
     <link rel="icon" type="image/png" href="/assets/Butterfly2.png">
     <link rel="apple-touch-icon" href="/assets/Butterfly2.png">
     <meta name="theme-color" content="#ffffff">
@@ -76,7 +76,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-storage-compat.js"></script>
-    <script src="firebaseConfig.js"></script>
+    <script src="/admin/firebaseConfig.js"></script>
     <script>
         console.log('Script section running');
         if (document.readyState === 'loading') {
